@startuml ClassDiagram
skinparam linetype ortho
skinparam Nodesep 150
skinparam Ranksep 150

class "TaskFusion" as app{
    - loggedInUser : Employee
    --
    + login(initials) : boolean
    + logout()
    + isLoggedIn() : boolean
    + findEmployee(initials) : boolean
    + registerEmployee() : Employee


    + createProject() : Project
    + editProject(Project p, Object property, Object value) : Project
}


package "Domain-layer" {

    class Report{
        remainingWorkHours : int
        incompleteActivities : List
        --
    }

    class Project{
        projectNumber : int
        customer : String
        internal : boolean
        startWeek : int
        endWeek : int
        --
        + createActivity(String)
        + setTimeBudget(int)
        + setStartWeek(int)
        + setEndWeek(int)
        + setProjectLeader(Employee)
    }
    class ProjectActivity{
        worktimeRegistrations : List
        timeBudget : int
        --
        + setTimeBudget(int)
    }
    class Activity <<(A, orchid)abstract>>{
        title : String
        startWeek : int
        endWeek : int
        --
        + setEndWeek(String, int)
        + setStartWeek(String, int)
    }
    class RegularActivity{
        --
    }

    class Employee{
        - initials : String
        - firstName : String
        - lastName : String
        --
        - validateFirstName(firstName) : String
        - validateLastName(lastName) : String
        - createInitials() : void
    }

}

app --> "0..*" Project : projects
Project -> Report : generateReport(Project project)
app --> "0..*" Employee : employees

app --> "0..1" Employee : user

Activity <|-- ProjectActivity
Activity <|- RegularActivity

Project --> "1" Employee : projectLeader
Project --> "0..*" Employee : employees
Project -> "0..*" ProjectActivity : activities
Employee -> "0..*" RegularActivity : regularActivities

@enduml